panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__constexpr__test_error_constexpr_error_in_bitfield_width.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/constexpr/test_error_constexpr_error_in_bitfield_width.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: signed overflow in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_bitfield_width.c:2:11]
   │
 2 │     int x:-(int)0x8000'0000;
   │           ────────┬────────  
   │                   ╰────────── in this expression of type `int`
───╯

Error: signed overflow in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_bitfield_width.c:3:11]
   │
 3 │     int y:-(int)0x8000'0000;
   │           ────────┬────────  
   │                   ╰────────── in this expression of type `int`
───╯

Error: negative bitfield width
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_bitfield_width.c:4:11]
   │
 4 │     int z:10 - 20;
   │           ───┬───  
   │              ╰───── this width is negative: `-10`
───╯
